IMPROVE: Fix header style for best box

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -10,7 +10,9 @@
 			<trans-unit id="tx_bestbox_domain_model_base.name">
 				<source>name</source>
 			</trans-unit>
-			
+			<trans-unit id="search">
+				<source>Search</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
