FEARTURE: footer and footer info

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -19,6 +19,9 @@
 			<trans-unit id="home">
 				<source>Home</source>
 			</trans-unit>
+			<trans-unit id="copyright">
+				<source>2013 Best Box. powered by Ninja Bub team.</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
